--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,7 +1,14 @@
+name: env
+
 on:
-  workflow_call:
-    secrets:
-      access-token:
-        description: 'PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD'
-        required: false
-        default: ${{ secrets.PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD }}
+  push:
+    branches: [ main ]
+
+jobs:
+  secret-in-github-actions:
+    runs-on: window-latest
+
+    steps:
+      -name: Setting env
+      env:
+        PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD: ${{ secrets.PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD }}
