--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -5,8 +5,8 @@ on:
     branches: [ main ]
 
 jobs:
-  secret-in-github-actions:
-    runs-on: window-latest
+  secrets-in-github-actions:
+    runs-on: windows-latest
 
     steps:
       - name: Setting env
