--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -12,3 +12,4 @@ jobs:
       - name: Setting env
         env:
           PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD: ${{ secrets.PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD }}
+        run: echo "Process finished"
