--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -13,3 +13,8 @@ jobs:
         env:
           PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD: ${{ secrets.PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD }}
         run: echo "Process finished"
+
+      - name: create env file
+        run: |
+          touch .env
+          echo PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD=${{ secrets.PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD }} >> .env
