--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,20 +1,42 @@
-name: env
-
+name: Deploy to GitHub Pages
 on:
   push:
-    branches: [ main ]
-
+    branches:
+      - main
+  workflow_dispatch:
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 jobs:
-  secrets-in-github-actions:
-    runs-on: windows-latest
-
+  build:
+    environment:
+        name: github-pages
+        url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
     steps:
-      - name: Setting env
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "21"
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm install
+      - name: Build project
+        run: npm run build
         env:
           PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD: ${{ secrets.PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD }}
-        run: echo "Process finished"
-
-      - name: create env file
-        run: |
-          touch .env
-          echo PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD=${{ secrets.PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD }} >> .env
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: ./build
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v3
