--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,42 +1,20 @@
-name: Deploy to GitHub Pages
+name: env
+
 on:
   push:
-    branches:
-      - main
-  workflow_dispatch:
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+    branches: [ main ]
+
 jobs:
-  build:
-    environment:
-        name: github-pages
-        url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
+  Getting Secrets:
+    runs-on: windows-latest
+
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "21"
-          cache: 'npm'
-      - name: Install dependencies
-        run: npm install
-      - name: Build project
-        run: npm run build
+      - name: Setting env
         env:
           PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD: ${{ secrets.PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD }}
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: ./build
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v3
+        run: echo "Process finished"
+
+      - name: Creating .env file
+        run: |
+          touch .env
+          echo PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD=${{ secrets.PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD }} >> .env
