--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -18,3 +18,5 @@ jobs:
         run: |
           touch .env
           echo PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD=${{ secrets.PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD }} >> .env
+      - name: Part 2
+        run: echo $PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD | base64 -d > .env
