--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -19,4 +19,4 @@ jobs:
           touch .env
           echo PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD=${{ secrets.PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD }} >> .env
       - name: Part 2
-        run: echo $PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD | base64 -d > .env
+        run: echo $PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD | base64 -d > general.js
