--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
+      - uses: actions/checkout@v2
       - name: Setting env
         env:
           PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD: ${{ secrets.PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD }}
