--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Setting env
         env:
           PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD: ${{ secrets.PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD }}
-        run: echo "Process finished"
+        run: echo "Process finished $PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD"
 
       - name: Creating .env file
         run: |
