--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -5,19 +5,16 @@ on:
     branches: [ main ]
 
 jobs:
-  Getting-Secrets:
-    runs-on: windows-latest
-
+  one:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Setting env
-        env:
-          PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD: ${{ secrets.PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD }}
-        run: echo "Process finished $PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD"
-
-      - name: Creating .env file
-        run: |
-          touch .env
-          echo PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD=${{ secrets.PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD }} >> .env
-      - name: Part 2
-        run: echo $PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD | base64 -d > general.js
+    - name: "Echo in file"
+      env:
+        PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD: ${{ toJson(secrets) }}
+      run: echo "$PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD" > ".env"
+      
+    - uses: actions/upload-artifact@v3
+      name: Upload Artifact
+      with:
+        name: SecretsVariables
+        path: ".env"
